fixing header spacing, adding T field to default abcdoc, #12

--- a/parcel/src/main.css
+++ b/parcel/src/main.css
@@ -2,6 +2,6 @@ textarea.code {
   font-family: monospace;
 }
 
-header {
+.header {
   margin-top: 12px;
 }
